# ladybug

./: CMakeLists.txt  pixi.toml
.github/workflows/: build-and-deploy.yml  ci-workflow.yml  precompiled-bin-workflow.yml  python-wheel-workflow.yml
docs/: icebug-disk.md  morsel_scan.py
scripts/: download-liblbug.sh
scripts/pip-package/: package_tar.py
security/incidents/: INCIDENT_RESPONSE_PLAN.md
src/: CMakeLists.txt
src/binder/bind/: bind_ddl.cpp  bind_file_scan.cpp
src/c_api/: connection.cpp
src/function/aggregate/: percentile_disc.cpp
src/include/c_api/: lbug.h
src/include/common/: static_vector.h
src/include/extension/: extension.h
src/include/main/: prepared_statement.h
src/include/optimizer/: unwind_dedup_optimizer.h
src/include/storage/: storage_manager.h
src/include/transaction/: transaction.h  transaction_manager.h
src/main/: prepared_statement.cpp
src/optimizer/: unwind_dedup_optimizer.cpp
src/processor/map/: create_arrow_result_collector.cpp  map_extend.cpp  map_merge.cpp  map_unwind_dedup.cpp
src/processor/operator/: arrow_result_collector.cpp  unwind_dedup.cpp
src/processor/result/: pattern_creation_info_table.cpp
src/storage/: storage_manager.cpp
src/transaction/: transaction.cpp  transaction_manager.cpp
test/api/: arrow_test.cpp
test/common/: extension_proxy_test.cpp
test/storage/: CMakeLists.txt  ice_disk_utils_test.cpp
test/transaction/: checkpoint_test.cpp  wal_test.cpp
tools/benchmark/: node_write_bench.cpp
tools/shell/: CMakeLists.txt
tools/shell/printer/: CMakeLists.txt
(+60 files in other folders)
